--- a/.github/workflows/pac-pipeline-build.yaml
+++ b/.github/workflows/pac-pipeline-build.yaml
@@ -25,7 +25,7 @@ jobs:
     name: Build Deployment Plans
     runs-on: ubuntu-latest
     container:
-      image: mcr.microsoft.com/azure-cli:10.4.1
+      image: mcr.microsoft.com/azure-cli:latest
 
     steps:
       - name: Checkout
