--- a/.github/workflows/pac-pipeline-build.yaml
+++ b/.github/workflows/pac-pipeline-build.yaml
@@ -25,16 +25,11 @@ jobs:
     name: Build Deployment Plans
     runs-on: ubuntu-latest
     container:
-      image: mcr.microsoft.com/azure-cli:latest
+      image: mcr.microsoft.com/powershell
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3.3.0
-
-      - name: Setup PowerShell
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y powershell
 
       - name: Check for NO ACTIONS
         shell: pwsh
