--- a/.github/workflows/pac-pipeline-build.yaml
+++ b/.github/workflows/pac-pipeline-build.yaml
@@ -36,7 +36,7 @@ jobs:
         run: |
           if (Test-Path -Path ${{inputs.definition_folder}} -Filter "NO_ACTIONS" -Recurse) {
             Write-Output "NO_ACTIONS file found, exiting"
-            gh run cancel ${ github.run_id }}
+            gh run cancel ${{ github.run_id }}
             gh run watch ${{ github.run_id }}
           }
 
