--- a/.github/workflows/pac-pipeline-build.yaml
+++ b/.github/workflows/pac-pipeline-build.yaml
@@ -25,7 +25,7 @@ jobs:
     name: Build Deployment Plans
     runs-on: ubuntu-latest
     container:
-      image: mcr.microsoft.com/powershell
+      image: mcr.microsoft.com/powershell:7.1.6-centos-8
 
     steps:
       - name: Checkout
