--- a/.github/workflows/pac-pipeline-build.yaml
+++ b/.github/workflows/pac-pipeline-build.yaml
@@ -31,6 +31,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3.3.0
 
+      - name: Install PowerShell
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y powershell
+
       - name: Check for NO ACTIONS
         shell: pwsh
         run: |
