--- a/.github/workflows/pac-pipeline-build.yaml
+++ b/.github/workflows/pac-pipeline-build.yaml
@@ -33,8 +33,8 @@ jobs:
 
       - name: Install PowerShell
         run: |
-          sudo apt-get update
-          sudo apt-get install -y powershell
+          apt-get update
+          apt-get install -y powershell
 
       - name: Check for NO ACTIONS
         shell: pwsh
