--- a/.github/workflows/pac-pipeline-build.yaml
+++ b/.github/workflows/pac-pipeline-build.yaml
@@ -23,9 +23,9 @@ on:
 jobs:
   build:
     name: Build Deployment Plans
-    runs-on: ubuntu-latest
+    runs-on: centos-latest
     container:
-      image: mcr.microsoft.com/azure-cli:latest
+      image: mcr.microsoft.com/azure-powershell:10.4.1-centos-7
 
     steps:
       - name: Checkout
