add a step to check for pwsh version

--- a/.github/workflows/pac-pipeline-build.yaml
+++ b/.github/workflows/pac-pipeline-build.yaml
@@ -28,25 +28,22 @@ jobs:
       image: mcr.microsoft.com/azure-powershell:10.4.1-centos-7
 
     steps:
+
+      - name: Check PowerShell Version
+        shell: pwsh
+        run: |
+         Write-Output "PowerShell Version: $($PSVersionTable.PSVersion)"
+
       - name: Checkout
         uses: actions/checkout@v3.3.0
 
       - name: Check for NO ACTIONS
         shell: pwsh
         run: |
-          $definitionFolder = ${{inputs.definition_folder}}
-          $noActionsFileFound = $false
-
-          Get-ChildItem -Path $definitionFolder | ForEach-Object {
-              if ($_.Name -eq "NO_ACTIONS" -and $_.PSIsContainer -eq $false) {
-                  $noActionsFileFound = $true
-              }
-          }
-
-          if ($noActionsFileFound) {
-              Write-Output "NO_ACTIONS file found, exiting"
-              gh run cancel ${{ github.run_id }}
-              gh run watch ${{ github.run_id }}
+          if (Test-Path -Path ${{inputs.definition_folder}} -Filter "NO_ACTIONS" -Recurse) {
+            Write-Output "NO_ACTIONS file found, exiting"
+            gh run cancel ${{ github.run_id }}
+            gh run watch ${{ github.run_id }}
           }
 
       - name: Install The Required Modules
