add shell command to use power shell for install modules

--- a/.github/workflows/pac-pipeline-build.yaml
+++ b/.github/workflows/pac-pipeline-build.yaml
@@ -47,6 +47,7 @@ jobs:
           }
 
       - name: Install The Required Modules
+        shell: pwsh
         run: |
           Register-PSRepository -Name PSGallery -SourceLocation https://www.powershellgallery.com/api/v2/ -InstallationPolicy Trusted -PackageManagementProvider nuget
           Get-PSRepository
