--- a/.github/workflows/pac-pipeline-build.yaml
+++ b/.github/workflows/pac-pipeline-build.yaml
@@ -49,9 +49,10 @@ jobs:
       - name: Install The Required Modules
         shell: pwsh
         run: |
-          Register-PSRepository -Name PSGallery_1 -SourceLocation https://www.powershellgallery.com/api/v2/ -InstallationPolicy Trusted -PackageManagementProvider NuGet
+          Unregister-PSRepository PSGallery_1
+          Register-PSRepository -Name PSGallery -SourceLocation https://www.powershellgallery.com/api/v2/ -InstallationPolicy Trusted -PackageManagementProvider NuGet
           Get-PSRepository
-          Install-Module -Name EnterprisePolicyAsCode -Force -Scope CurrentUser -RequiredVersion 8.2.4 -Repository PSGallery_1
+          Install-Module -Name EnterprisePolicyAsCode -Force -Scope CurrentUser -RequiredVersion 8.2.4 -Repository PSGallery
 
       - name: Build the Plans
         shell: pwsh
