--- a/.github/workflows/pac-pipeline-build.yaml
+++ b/.github/workflows/pac-pipeline-build.yaml
@@ -49,11 +49,9 @@ jobs:
       - name: Install The Required Modules
         shell: pwsh
         run: |
+          Register-PSRepository -Name PSGallery -SourceLocation https://www.powershellgallery.com/api/v2/ -InstallationPolicy Trusted -PackageManagementProvider NuGet
           Get-PSRepository
-          Unregister-PSRepository -Name PSGallery
-          Register-PSRepository -Name Mypsgallery -SourceLocation https://www.powershellgallery.com/api/v2/ -InstallationPolicy Trusted -PackageManagementProvider NuGet
-          Get-PSRepository
-          Install-Module -Name EnterprisePolicyAsCode -Force -Scope CurrentUser -RequiredVersion 8.2.4 -Repository Mypsgallery
+          Install-Module -Name EnterprisePolicyAsCode -Force -Scope CurrentUser -RequiredVersion 8.2.4 -Repository PSGallery
 
       - name: Build the Plans
         shell: pwsh
