--- a/.github/workflows/pac-pipeline-build.yaml
+++ b/.github/workflows/pac-pipeline-build.yaml
@@ -51,7 +51,7 @@ jobs:
         run: |
           Get-PSRepository
           Unregister-PSRepository -Name PSGallery
-          Register-PSRepository -Name Mypsgallery -SourceLocation https://www.powershellgallery.com/api/v2/ -InstallationPolicy Trusted -PackageManagementProvider NuGet
+          Register-PSRepository -Name Mypsgallery -SourceLocation https://www.powershellgallery.com/api/v2/ -PublishLocation https://www.powershellgallery.com/api/v2/  -InstallationPolicy Trusted -PackageManagementProvider NuGet
           Get-PSRepository
           Install-Module -Name EnterprisePolicyAsCode -Force -Scope CurrentUser -RequiredVersion 8.2.4 -Repository Mypsgallery
 
