--- a/.github/workflows/pac-pipeline-build.yaml
+++ b/.github/workflows/pac-pipeline-build.yaml
@@ -49,6 +49,7 @@ jobs:
       - name: Install The Required Modules
         shell: pwsh
         run: |
+          
           Register-PSRepository -Name PSGallery_1 -SourceLocation https://www.powershellgallery.com/api/v2/ -InstallationPolicy Trusted -PackageManagementProvider NuGet
           Get-PSRepository
           Install-Module -Name EnterprisePolicyAsCode -Force -Scope CurrentUser -RequiredVersion 8.2.4 -Repository PSGallery_1
@@ -56,6 +57,7 @@ jobs:
       - name: Build the Plans
         shell: pwsh
         run: |
+          Unregister-PSRepository -Name PSGallery
           $SecurePassword = ConvertTo-SecureString -String ${{secrets.AZURE_PAC_CLIENT_SECRET}} -AsPlainText -Force
           $Credential = New-Object -TypeName System.Management.Automation.PSCredential -ArgumentList ${{secrets.AZURE_PAC_CLIENT_ID}}, $SecurePassword
           Connect-AzAccount -ServicePrincipal -TenantId ${{secrets.AZURE_PAC_TENANT_ID}} -Credential $Credential
