--- a/Definitions/global-settings.jsonc
+++ b/Definitions/global-settings.jsonc
@@ -3,13 +3,17 @@
     "pacOwnerId": "1234567890",
     "pacEnvironments": [
         {
-            "pacSelector": "Azure subscription 1",
+            "pacSelector": "SUB-CORP-SDEPAC",
             "cloud": "AzureCloud",
             "tenantId": "54cd337e-4410-429f-8ae9-bd3f51932cfb",
-            "deploymentRootScope": "/subscriptions/31648342-91f2-4a70-ae4f-71f58cb9e044"
+            "deploymentRootScope": "/subscriptions/31648342-91f2-4a70-ae4f-71f58cb9e044",
+            "desiredState": {
+                "strategy": "ownedOnly"
+            }
         }
     ]
 
 
 }
+  
   
