add prepare workspace job

--- a/.github/workflows/pac-pipline-deploy.yaml
+++ b/.github/workflows/pac-pipline-deploy.yaml
@@ -18,6 +18,7 @@ jobs:
     name: Review build plan
     runs-on: ubuntu-latest
     steps:
+
       - name: Show plan Output
         uses: actions/github-script@v6
         with:
@@ -31,4 +32,37 @@ jobs:
               .addRaw('Then return to this page to approve or deny the Deployment of the plan.')
               .addBreak()
               .write()
-      
+  
+  prepare-workspace: 
+    name: prepare workspace for Deployment
+    runs-on: ubuntu-latest
+    needs: review-build-plan-message
+    environment: ${{ inputs.envirnoment}}
+    steps:
+
+      - name: Checkout
+        uses: actions/checkout@v3.3.0
+
+      - name: Download artifact
+        uses: actions/github-script@v6
+        with:
+          script: |
+            let allArtifacts = await github.rest.actions.listWorkflowRunArtfacts({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              run_id: ${{ inputs.run_id }}
+              }); 
+            
+            console.log(context.rep.owner, context.repo.repo, ${{ inputs.run_id }}, allArtifacts.data.artifacts);
+            let matchArtifact= allArtifacts.data.artifacts.filter((artifact)=> {
+            return artifact.name=="Deployment-Plans"})[0];
+
+            let download= await github.rest.actions.downloadArtifact({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              artifact_id: matchArtifact.id,
+              archive_format: 'zip',
+              });
+
+            let fs = require('fs')
+            fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/Deployment-Plans.zip`, Buffer.from(download.data));
