--- a/.github/workflows/pac-pipline-deploy.yaml
+++ b/.github/workflows/pac-pipline-deploy.yaml
@@ -3,15 +3,24 @@ name: PaC Pipeline Deploy
 on:
   workflow_call:
     inputs:
+
       environment:
         type: string
         required: true 
+
       pac-selector-dev:
         type: string
         required: true
+
       run_id:
         type: string
         required: true
+
+      plan_folder:
+        type: string
+        required: false
+        default: ./Output
+
 
 jobs:
   review-build-plan-message:
@@ -34,7 +43,7 @@ jobs:
               .write()
   
   prepare-workspace: 
-    name: prepare workspace for Deployment
+    name: Prepare workspace for deployment
     runs-on: ubuntu-latest
     needs: review-build-plan-message
     environment: ${{ inputs.envirnoment}}
@@ -66,3 +75,28 @@ jobs:
 
             let fs = require('fs')
             fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/Deployment-Plans.zip`, Buffer.from(download.data));
+
+      - name: Unzip artifacts
+        shell: bash
+        run: |
+          mkdir -p ${{ inputs.plan_folder}}
+          unzip Deployment-Plans.zip -d ${{ inputs.plan_folder }}
+      
+      - name: Cache the workspace
+        uses: actions/cache/save@v3
+        with:
+          path: .
+          key: ${{ runner.os }}-cache--${{ github.run_id }}
+
+  deploy-to-dev:
+    name: Deploy policy plan and roles to dev environment
+    runs-on: ubuntu-latest
+    needs: prepare-workspace
+    steps:
+      - name: restore cache
+        uses: actions/cache/restore
+        with:
+          path: .
+          key: ${{ runner.OS }}-cache--${{ github.run_id }}
+          restore-keys: |
+            ${{ runner.OS }}-cache-
