--- a/.github/workflows/pac-pipline-deploy.yaml
+++ b/.github/workflows/pac-pipline-deploy.yaml
@@ -21,7 +21,6 @@ on:
         required: false
         default: ./Output
 
-
 jobs:
   review-build-plan-message:
     name: Review build plan
@@ -91,6 +90,8 @@ jobs:
   deploy-to-dev:
     name: Deploy policy plan and roles to dev environment
     runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/azure-powershell:10.4.1-centos-7
     needs: prepare-workspace
     steps:
       - name: restore cache
