--- a/.github/workflows/pac-pipline-deploy.yaml
+++ b/.github/workflows/pac-pipline-deploy.yaml
@@ -44,6 +44,8 @@ jobs:
   prepare-workspace: 
     name: Prepare workspace for deployment
     runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/azure-powershell:10.4.1-centos-7
     needs: review-build-plan-message
     environment: ${{ inputs.envirnoment}}
     steps:
