--- a/.github/workflows/pac-pipline-deploy.yaml
+++ b/.github/workflows/pac-pipline-deploy.yaml
@@ -77,29 +77,29 @@ jobs:
             let fs = require('fs')
             fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/Deployment-Plans.zip`, Buffer.from(download.data));
 
-      - name: Unzip artifacts
-        shell: bash
-        run: |
-          mkdir -p ${{ inputs.plan_folder}}
-          unzip Deployment-Plans.zip -d ${{ inputs.plan_folder }}
+  #     - name: Unzip artifacts
+  #       shell: bash
+  #       run: |
+  #         mkdir -p ${{ inputs.plan_folder}}
+  #         unzip Deployment-Plans.zip -d ${{ inputs.plan_folder }}
       
-      - name: Cache the workspace
-        uses: actions/cache/save@v3
-        with:
-          path: .
-          key: ${{ runner.os }}-cache--${{ github.run_id }}
+  #     - name: Cache the workspace
+  #       uses: actions/cache/save@v3
+  #       with:
+  #         path: .
+  #         key: ${{ runner.os }}-cache--${{ github.run_id }}
 
-  deploy-to-dev:
-    name: Deploy policy plan and roles to dev environment
-    runs-on: ubuntu-latest
-    container:
-      image: mcr.microsoft.com/azure-powershell:10.4.1-centos-7
-    needs: prepare-workspace
-    steps:
-      - name: restore cache
-        uses: actions/cache/restore
-        with:
-          path: .
-          key: ${{ runner.OS }}-cache--${{ github.run_id }}
-          restore-keys: |
-            ${{ runner.OS }}-cache-
+  # deploy-to-dev:
+  #   name: Deploy policy plan and roles to dev environment
+  #   runs-on: ubuntu-latest
+  #   container:
+  #     image: mcr.microsoft.com/azure-powershell:10.4.1-centos-7
+  #   needs: prepare-workspace
+  #   steps:
+  #     - name: restore cache
+  #       uses: actions/cache/restore
+  #       with:
+  #         path: .
+  #         key: ${{ runner.OS }}-cache--${{ github.run_id }}
+  #         restore-keys: |
+  #           ${{ runner.OS }}-cache-
