--- a/.github/workflows/pac-pipline-deploy.yaml
+++ b/.github/workflows/pac-pipline-deploy.yaml
@@ -77,17 +77,17 @@ jobs:
             let fs = require('fs')
             fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/Deployment-Plans.zip`, Buffer.from(download.data));
 
-  #     - name: Unzip artifacts
-  #       shell: bash
-  #       run: |
-  #         mkdir -p ${{ inputs.plan_folder}}
-  #         unzip Deployment-Plans.zip -d ${{ inputs.plan_folder }}
+      - name: Unzip artifacts
+        shell: bash
+        run: |
+          mkdir -p ${{ inputs.plan_folder}}
+          unzip Deployment-Plans.zip -d ${{ inputs.plan_folder }}
       
-  #     - name: Cache the workspace
-  #       uses: actions/cache/save@v3
-  #       with:
-  #         path: .
-  #         key: ${{ runner.os }}-cache--${{ github.run_id }}
+      - name: Cache the workspace
+        uses: actions/cache/save@v3
+        with:
+          path: .
+          key: ${{ runner.os }}-cache--${{ github.run_id }}
 
   # deploy-to-dev:
   #   name: Deploy policy plan and roles to dev environment
