--- a/.github/workflows/pac-pipline-deploy.yaml
+++ b/.github/workflows/pac-pipline-deploy.yaml
@@ -89,17 +89,17 @@ jobs:
           path: .
           key: ${{ runner.os }}-cache--${{ github.run_id }}
 
-  # deploy-to-dev:
-  #   name: Deploy policy plan and roles to dev environment
-  #   runs-on: ubuntu-latest
-  #   container:
-  #     image: mcr.microsoft.com/azure-powershell:10.4.1-centos-7
-  #   needs: prepare-workspace
-  #   steps:
-  #     - name: restore cache
-  #       uses: actions/cache/restore
-  #       with:
-  #         path: .
-  #         key: ${{ runner.OS }}-cache--${{ github.run_id }}
-  #         restore-keys: |
-  #           ${{ runner.OS }}-cache-
+  deploy-to-dev:
+    name: Deploy policy plan and roles to dev environment
+    runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/azure-powershell:10.4.1-centos-7
+    needs: prepare-workspace
+    steps:
+      - name: restore cache
+        uses: actions/cache/restore
+        with:
+          path: .
+          key: ${{ runner.OS }}-cache--${{ github.run_id }}
+          restore-keys: |
+            ${{ runner.OS }}-cache-
