--- a/.github/workflows/pac-pipeline-build.yaml
+++ b/.github/workflows/pac-pipeline-build.yaml
@@ -40,7 +40,8 @@ jobs:
       - name: Install The Required Modules
         shell: pwsh
         run: |
-          Get-PSRepository
+          Register-PSRepository
+          Import-Module Az
           Install-Module -Name EnterprisePolicyAsCode -Force -Scope CurrentUser -RequiredVersion 8.2.4 -Repository PSGallery
 
       - name: Build the Plans
