add upload deployment output code block

--- a/.github/workflows/pac-pipline-deploy.yaml
+++ b/.github/workflows/pac-pipline-deploy.yaml
@@ -139,3 +139,8 @@ jobs:
             -PacEnvironmentSelector ${{ inputs.pac-selector-dev }} `
             *>&1| Tee-Object -FilePath $outputFile
 
+      - name: Upload Deployment Output
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ inputs.pac-selector-dev }} deployment output
+          path: "${{ inputs.plan_folder }} /output.txt"
